package main.game;
public enum CellType {
    EMPTY,
    FOOD,
    WALL,
    POWER
}