package main.game;
public enum Direction {
    UP,
    DOWN,
    LEFT,
    RIGHT
}