package main.game;
public interface GameElement {
    public int getX();
    public int getY();
}
